--- a/css/hearts.scss
+++ b/css/hearts.scss
@@ -209,6 +209,19 @@ $hashColor: #1E2274;
       font-size: 1.2em;
 
       vertical-align: middle;
+
+
+      .item-caption-input {
+        font-family: 'Coda';
+        width: 100%;
+        resize: none;
+        font-size: 1em;
+        border: 1px solid #000;
+        background: #fff;
+        color: #000;
+        padding: 5px;
+      }
+
     }
     
     .item-comments {
@@ -229,6 +242,10 @@ $hashColor: #1E2274;
         width: 100%;
         margin: auto;
       }
+    }
+
+    .comment-input-fields {
+      display: flex;
     }
     
     .comment-input-field {
@@ -251,6 +268,7 @@ $hashColor: #1E2274;
   .comment-list {
     
     .comment-item {
+
       position: relative;
       z-index: 5;
       &:not(:first-child) {
@@ -286,6 +304,19 @@ $hashColor: #1E2274;
           max-width: 100%;
           height: auto;
           vertical-align: bottom;
+        }
+      }
+
+      .comment-tools {
+        opacity: 0;
+        cursor: default;
+
+        transition: opacity .200s ease;
+      }
+
+      &:hover {
+        .comment-tools {
+          opacity: 1;
         }
       }
       
@@ -382,6 +413,7 @@ $hashColor: #1E2274;
         background: #fff;
         color: #d4af37;
         font-size: 1.4em;
+        text-align: center;
       }
       
       .modal-body {
@@ -588,5 +620,91 @@ $hashColor: #1E2274;
       background: url('/images/hearttag.png') no-repeat;
       background-size: 20px;
       vertical-align: middle;
+    }
+  }
+
+  /* Mini char selector for comments */
+
+  .mini-char-selector {
+    
+    background: #fff;
+    width: 50px;
+    height: 50px;
+    padding: 1px;
+    position: relative;
+    
+    
+
+    .selected-char {
+      border: 1px solid #d4af37;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #333;
+      
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      vertical-align: bottom;
+    }
+
+    .selected-char-options {
+      margin-top: 5px;
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+      max-height: 0;
+      background: #fff;      
+      overflow: hidden;
+      z-index: 40;
+      
+      &.active {
+        border: 1px solid #000;
+        max-height: 500px;
+        overflow-y: auto;
+      }
+
+      &::-webkit-scrollbar {
+        width: 1px;
+      }
+    }
+
+    .selected-char-option {
+      padding: 5px;
+
+      &:hover {
+        background: #d4af37;
+      }
+
+      .char-option-image {
+        border: 1px solid #d4af37;
+        border-radius: 50%;
+        overflow: hidden;
+        background: #333;
+      }
+
+      &.active {
+        background: darken(#d4af37, 5%);
+      }
+    }    
+  }
+
+  /* Info */
+
+
+  .info {
+    text-align: center;
+
+    p {
+      margin: 10px 0;
+    }
+
+    a {
+      color: #1E2274;
+    }
+
+    .social {
+      padding: 10px 0;
     }
   }
