--- a/css/hearts.css
+++ b/css/hearts.css
@@ -503,7 +503,7 @@ body {
     width: 20px;
     height: 21px;
     content: " ";
-    background: url("/images/hearttag.png") no-repeat;
+    background: url("/gummigram/images/hearttag.png") no-repeat;
     background-size: 20px;
     vertical-align: middle; }
 
